<resources>
    <string name="app_name">Check Out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is wrong</string>
    <string name="minimum_password">This password is short</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_failed">Logining in failed</string>
    <string name="title_activity_user_choice">UserChoice</string>
    <string name="chosoekid">Choose the Kid to Check him out</string>
    <string name="hello">Hello ,</string>
    <string name="mr">Mr. </string>
    <string name="mrs">Mrs. </string>
    <string name="choose"> Would you please choose one of your kids to check him  out ?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profil">ProfilActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="news">Latest News</string>
    <string name="education">Education</string>
    <string name="ed_progess">Educational progress</string>
    <string name="mae">Marks &amp; Evaluation</string>
</resources>
