<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aouyen.bacem.checkout.ProfilActivity"
    tools:showIn="@layout/app_bar_profil">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/d"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/decorativeback"
                android:fontFamily="@font/annie_use_your_telescope"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="vertical"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/name_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back1"
                            android:fontFamily="@font/annie_use_your_telescope"
                            android:paddingRight="20dp"
                            android:text="TextView"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/classroom_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back1"
                            android:fontFamily="@font/annie_use_your_telescope"
                            android:paddingRight="20dp"
                            android:text="TextView"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/age_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back1"
                            android:fontFamily="@font/annie_use_your_telescope"
                            android:paddingRight="20dp"
                            android:text="TextView"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/decorativeback"
                        android:fontFamily="@font/annie_use_your_telescope"
                        android:text="@string/news"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/news_list_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/scroll_back"
                        android:paddingBottom="60dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/education_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/d"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/decorativeback"
                android:fontFamily="@font/annie_use_your_telescope"
                android:text="@string/education"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="vertical"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/educ_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/back1"
                            android:fontFamily="@font/annie_use_your_telescope"
                            android:paddingRight="20dp"
                            android:text="TextView"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/decorativeback"
                        android:fontFamily="@font/annie_use_your_telescope"
                        android:text="@string/ed_progess"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="fill_vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ed_list_id"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:layout_weight="1"
                        android:background="@drawable/scroll_back"
                        android:paddingBottom="25dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="10dp"
                        android:paddingTop="8dp">

                    </android.support.v7.widget.RecyclerView>
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/container_back"
                        android:orientation="vertical"
                        android:paddingBottom="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/s_tit"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:background="@drawable/back1"
                            android:fontFamily="@font/architects_daughter"
                            android:text="subject name "
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:fontFamily="@font/annie_use_your_telescope"
                                android:paddingLeft="2dp"
                                android:paddingRight="0dp"
                                android:text="+Current Progress :"
                                android:textStyle="bold" />

                            <ProgressBar
                                android:id="@+id/progressBar3"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="2dp"
                                android:progress="100"
                                android:progressDrawable="@drawable/progress_dr" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/s_tit2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/back2"
                                android:fontFamily="@font/architects_daughter"
                                android:paddingLeft="2dp"
                                android:paddingRight="15dp"
                                android:text="Current Module"
                                android:textAlignment="viewStart"
                                android:textAllCaps="false"
                                android:textColor="?attr/colorPrimaryDark"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/s_tit3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/news_back_danger"
                                android:fontFamily="@font/alike"
                                android:paddingLeft="2dp"
                                android:paddingRight="15dp"
                                android:text="Teacher"
                                android:textAlignment="viewStart"
                                android:textAllCaps="false"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/desc_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@drawable/back2"
                            android:text="description here"
                            android:textAlignment="viewStart" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/markks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custombaxk"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/decorativeback"
                android:fontFamily="@font/annie_use_your_telescope"
                android:text="@string/mae"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="36sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mark_list_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
